--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+== 0.1.9 / 2009-07-01
+* change default single access mode
+
+== 0.1.8 / 2009-06-30
+* add single access mode
+
 == 0.1.7 / 2009-05-22
 * fix up old style rspec test (generator's)
 * add how to use. (patch from yhara)
